This file contains a detailed explanation of the changes between individual
versions of XINS.

$Id$

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 1.1.0 BETA 3:

* XINS/Java Client Framework:
  - Implemented SF.net RFE #1093174: Let Client use Common log messages.
    Removed logdoc entries in the range 20xx.

* XINS/Java Common Library:
  - Added a toHexString(char) method to the HexConverter class.
  - Fixed various Checkstyle-reported issues.

* Logdoc:
  - Improved transformation of XML to a Java String object for foreign
    languages.

* Generated build file:
  - Fixed SF.net bug #1102205: Directories with spaces are now supported
    for Windows.

* DTD:
  - Added missing DTD files for the 1.1 version.

* Changed "Copyright 2004" to "Copyright 2003-2005".

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 1.1.0 BETA 2:

* XINS/Java Common Library:
  - Fixed SF.net bug #1101582: ElementParser parses bytes instead of chars.
    The parse method in the ElementParser now accepts a Reader instead of a
    byte[] array.
  - Fixed SF.net bug #1099358: Num of descriptors in GroupDescriptor. A
    GroupDescriptor now always contains at least 2 other descriptors.
  - Added a ProtectedList class which implements a java.util.List where
    elements can be added or removed only using the key passed in the
    constructor.
    This object is now used in the org.xins.common.xml.Element.
    Typical impact on performance: Small.

* XINS/Java Client Framework:
  - Hid some classes by changing the access level from public to
    package-private:
    . AbstractCAPICallRequest
    . AbstractCAPIErrorCodeException
    . BasicUnsuccessfulXINSCallExceptionFactory
    . InternalErrorException
    . InvalidRequestException
    . InvalidResponseException
    . UnsuccessfulXINSCallExceptionFactory

* XINS/Java Server Framework: