@@ -986,6 +986,8 @@ implements DefaultResultCodes {
     */
    private final FunctionResult doGetSettings() {
 
+      final String THIS_METHOD  = "doGetSettings()";
+
       FunctionResult builder = new FunctionResult();
 
       // Build settings
@@ -1021,7 +1023,11 @@ implements DefaultResultCodes {
       try {
          sysProps = System.getProperties();
       } catch (SecurityException ex) {
-         Log.log_3052(ex, "java.lang.System", "getProperties()");
+         final String SUBJECT_CLASS  = "java.lang.System";
+         final String SUBJECT_METHOD = "getProperties()";
+         Utils.logProgrammingError(CLASSNAME,     THIS_METHOD,
+                                   SUBJECT_CLASS, SUBJECT_METHOD,
+                                   null,          ex);
          sysProps = new Properties();
       }
 
